--- a/index.html
+++ b/index.html
@@ -5,6 +5,42 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOCS. | Knowledge Base</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Complete documentation and knowledge base for developers." />
+    <meta name="keywords" content="documentation, knowledge base, developer docs" />
+    <meta name="author" content="DOCS. Team" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:title" content="DOCS. | Knowledge Base" />
+    <meta property="og:description" content="Complete documentation and knowledge base for developers." />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:site_name" content="DOCS." />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://yourdomain.com/" />
+    <meta name="twitter:title" content="DOCS. | Knowledge Base" />
+    <meta name="twitter:description" content="Complete documentation and knowledge base for developers." />
+    <meta name="twitter:image" content="/og-image.png" />
+
+    <!-- Additional SEO -->
+    <link rel="canonical" href="https://yourdomain.com/" />
+
+    <!-- RSS Feeds -->
+    <link rel="alternate" type="application/rss+xml" title="DOCS. RSS Feed" href="/feed.xml" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
